Google button sizing issue #9, added some margin to the track listing to prevent overlap with the fixed action button.

--- a/src/sass/music.scss
+++ b/src/sass/music.scss
@@ -11,7 +11,7 @@
             }
         }
         .track-list {
-            margin-top: 2rem;
+            margin: 2em 70px 100px 0;
         }
         .right,
         .left {
